2008-09-16  Martyn Russell  <martyn@imendio.com>

	* src/tracker-extract/tracker-extract-png.c: Reworked the code
	here and fixed adding NULL values with sensible keys to the hash
	table. 
	
	* src/tracker-extract/tracker-extract.c:
	(tracker_get_file_metadata): Check the key and value separately so
	we don't just get one warning for either not knowing which is
	NULL.
	
	* src/tracker-indexer/tracker-indexer-module.c: 
	(tracker_indexer_module_file_get_uri): Removed the '\n' from the
	debug statement.
	
	* src/tracker-indexer/tracker-metadata-utils.c: Fixed a nasty
	crash where the watch is not removed when cleaning up IO channels.
	Grouped the functions more logically so it is clearer what this
	module does by function names.

	* src/tracker-indexer/tracker-metadata-utils.h: Removed unused
	function signatures and structs/enums.

2008-09-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-metadata-utils.c:
	* src/tracker-indexer/tracker-dbus.[ch]:
	* src/tracker-indexer/Makefile.am:
	* tests/tracker-indexer/Makefile.am:  Support for thumbnailing using
	org.freedeskop.thumbnailer.Generic (DBus names might change as the
	specification changes: http://live.gnome.org/ThumbnailerSpec)

2008-09-15  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-config.[ch]: Support legacy
	options SkipMountPoints, IndexEvolutionEmail and IndexThunderbirdEmail.

2008-09-15  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata-utils.c (tracker_metadata_read)
	(tracker_text_read): Don't remove the idle func when we're done
	reading metadata for one item, it can be reused for the next one.

2008-09-15  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.c:
	(tracker_env_check_xdg_dirs): Don't warn when the XDG_DATA_HOME
	environment variable is empty (and NULL).
	
	* src/libtracker-common/tracker-ontology.c:
	(tracker_ontology_service_add): Don't add service names and field